Fix footer issue throwing off mobile page spacing

--- a/components/footer/Footer.module.scss
+++ b/components/footer/Footer.module.scss
@@ -7,6 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  box-sizing: border-box;
 
   p, h1, a, figcaption {
     color: $gray-50;
@@ -33,8 +34,4 @@
 .left {
   margin: 80px 0px;
   min-width: 226px;
-}
-
-.middle, .right {
-  margin: 80px;
 }
