--- a/components/nav/Logos.module.scss
+++ b/components/nav/Logos.module.scss
@@ -9,7 +9,7 @@
   flex: 1;
 
   @media (max-width: $mobile-max) {
-    margin-top: 19px;
+    margin-top: 15px;
     width: 100%
   }
 
