--- a/components/nav/Nav.module.scss
+++ b/components/nav/Nav.module.scss
@@ -8,7 +8,8 @@
   }
 
   @media (max-width: $mobile-max) {
-
+    display: flex;
+    justify-content: space-between;
   }
 
 }
