--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -46,11 +46,25 @@ $desktop-min: 961px;
 /* home page! */
 
 %home-align-left {
-  padding-left: 118px;
+  @media (min-width: $desktop-min) {
+    padding-left: 118px;
+  }
+
+  @media (max-width: $mobile-max) {
+    padding-left: 15px;
+  }
 }
 
 %home-align-right {
-  padding-right: 118px;
+  @media (min-width: $desktop-min) {
+    padding-right: 118px;
+    box-sizing: border-box;
+  }
+
+  @media (max-width: $mobile-max) {
+    padding-right: 15px;
+    box-sizing: border-box;
+  }
 }
 
 /* survey page! */
@@ -66,6 +80,7 @@ $form-inner-padding: 74px;
   top: 0;
   margin: 0;
   width: 100%;
+  box-sizing: border-box;
   font-family: Inter, sans-serif;
   color: $black;
   a {
